# fdm3d

./: .gitmodules  CMakeLists.txt  main.cpp
include/fdm3d/: fdm3dsolver.h
python/: CMakeLists.txt  fdm3dsolver_wrapper.cpp
src/: CMakeLists.txt  fdm3dsolver.cpp
